# DTK-APP-BY-JSON

./: CMakeLists.txt  README  config.json  main.cpp  mainwindow.cpp  mainwindow.h
